--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "preserveConstEnums": true,
     "sourceMap": true,
     "allowJs": true,
-    "outDir": "dist"
+    "outDir": "public/js"
   },
   "include": ["src/**/*"]
 }
