--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "API for creating moving scores",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
   "author": "Wyatt Cannon",
   "license": "ISC",
